--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "react": "18.2.0",
     "react-native": "0.73.2",
+    "react-native-responsive-screen": "^1.4.2",
     "react-native-splash-screen": "^3.3.0"
   },
   "devDependencies": {
