--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-screens": "^3.29.0",
     "react-native-splash-screen": "^3.3.0",
     "react-redux": "^9.1.0",
+    "redux-deep-persist": "^1.0.7",
     "redux-persist": "^6.0.0"
   },
   "devDependencies": {
